@@ -1,5 +1,10 @@
 ChangeLog for SVN maps trunk directory:
 ---------------------------------------------------------------------------
+Guild fixes, enabling to buy again, and manage status through the Oracle.
+ python/guilds/README.txt guildbuy.py guild_entry.py guildoracle.py guild_dues.py
+ python/CFGuilds.py
+-- Ryo 2007-02-11
+
 python/IPO/say.py:
   Small change to use new package archetype and image from Mike B.
   -- Aaron Baugher 2007-02-10
